--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button class="close-menu">
                 <i class="fa-solid fa-circle-chevron-right"></i>
             </button>
-            <h2 class="program-title">--- Programa de Contribucion por Mejoras ---</h2>
+            <h2 class="program-title">Programa de Contribución por Mejoras</h2>
             <ul class="desktop-menu">
                 <li><a class="navcolor2" href="#project">PROYECTO DE LUMINARIAS</a></li>
                 <li><a class="navcolor3" href="#obras">SOBRE OBRAS</a></li>
@@ -52,23 +52,23 @@
                 <!-- <img src="img/diseño-mobile.png" srcset="/img/diseño.png 1000w, /img/diseño-mobile.png 800w" alt="funcionamiento de las luminarias, FOGOP"> -->
                 <picture>
                     <source media="(min-width: 800px)" srcset="img/diseño.png">
-                    <source media="(max-width: 800px)" srcset="img/diseño-mobile.png">
-                    <img src="img/diseño-mobile.png" alt="Imagen de diseño">
+                    <source media="(max-width: 800px)" srcset="img/diseñoMobile.png">
+                    <img src="img/diseñoMobile.png" alt="Imagen de diseño">
                   </picture>
                   
             </div>
             <div class="miSlider fade">
                 <picture>
-                    <source media="(min-width: 800px)" srcset="img/diseño-mobile2.png">
-                    <source media="(max-width: 800px)" srcset="img/diseño2.png">
-                    <img src="img/diseño-mobile2.png" alt="Imagen de diseño">
+                    <source media="(min-width: 800px)" srcset="img/diseño2.png">
+                    <source media="(max-width: 800px)" srcset="img/diseñoMobile2.png">
+                    <img src="img/diseño2.png" alt="Imagen de diseño">
                   </picture>
             </div>
             <div class="miSlider fade">
                 <picture>
-                    <source media="(min-width: 800px)" srcset="img/diseño-mobile3.png">
-                    <source media="(max-width: 800px)" srcset="img/diseño3.png">
-                    <img src="img/diseño-mobile3.png" alt="Imagen de diseño">
+                    <source media="(min-width: 800px)" srcset="img/diseño3.png">
+                    <source media="(max-width: 800px)" srcset="img/diseñoMobile3.png">
+                    <img src="img/diseño3.png" alt="Imagen de diseño">
                   </picture>
             </div>
             <div class="direcciones">
