--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             </button>
             <h2 class="program-title">Programa de Contribución por Mejoras</h2>
             <ul class="desktop-menu">
-                <li><a class="navcolor2" href="#project">PROYECTO DE LUMINARIAS</a></li>
-                <li><a class="navcolor3" href="#obras">SOBRE OBRAS</a></li>
-                <li><a class="navcolor4" href="#pagos">SOBRE PAGOS</a></li>
-                <li><a class="navcolor5" href="#donde">DONDE ESTAMOS</a></li>
+                <li><a href="#project">PROYECTO DE LUMINARIAS</a></li>
+                <li><a href="#obras">SOBRE OBRAS</a></li>
+                <li><a href="#pagos">SOBRE PAGOS</a></li>
+                <li><a href="#donde">DONDE ESTAMOS</a></li>
             </ul>
         </nav>
         <a class="hambur-desktop">
@@ -48,12 +48,11 @@
     </header>
     <main>
         <div class="slide-contenedor">
-            <div class="miSlider fade">
-                <!-- <img src="img/diseño-mobile.png" srcset="/img/diseño.png 1000w, /img/diseño-mobile.png 800w" alt="funcionamiento de las luminarias, FOGOP"> -->
+            <div class="miSlider fade">                
                 <picture>
                     <source media="(min-width: 800px)" srcset="img/diseño.png">
                     <source media="(max-width: 800px)" srcset="img/diseñoMobile.png">
-                    <img src="img/diseñoMobile.png" alt="Imagen de diseño">
+                    <img src="img/diseñoMobile.png" alt="imagen de luminarias en barrios">
                   </picture>
                   
             </div>
@@ -61,14 +60,14 @@
                 <picture>
                     <source media="(min-width: 800px)" srcset="img/diseño2.png">
                     <source media="(max-width: 800px)" srcset="img/diseñoMobile2.png">
-                    <img src="img/diseño2.png" alt="Imagen de diseño">
+                    <img src="img/diseño2.png" alt="banner de diseño FOGOP">
                   </picture>
             </div>
             <div class="miSlider fade">
                 <picture>
                     <source media="(min-width: 800px)" srcset="img/diseño3.png">
                     <source media="(max-width: 800px)" srcset="img/diseñoMobile3.png">
-                    <img src="img/diseño3.png" alt="Imagen de diseño">
+                    <img src="img/diseño3.png" alt="banner Luminarias Fogop">
                   </picture>
             </div>
             <div class="direcciones">
@@ -322,12 +321,7 @@
             </a></button><br>
     </section>
     <footer>
-
-
-
         <div class="order-footer">
-
-
             <section class="selector">
                 <div class="email-footer">
                     <h2 class="mensaje-foot">Envíanos tu mensaje</h2>
@@ -360,7 +354,6 @@
                         </form>
                     </div>
                 </div>
-
             </section>
             <section class="listas">
                 <ul class="lista1">
