--- a/index.html
+++ b/index.html
@@ -87,13 +87,10 @@
             <div class="start-info">
                 <h3 class="title">PROYECTO DE LUMINARIAS</h3><br>
                 <h4 class="orderContr">¿QUE ES LA CONTRIBUCION POR MEJORAS?</h4>
-                <p class="parrafoo">Las contribuciones por mejoras es un sistema que permite la realizacion, de forma
-                    financiadas, de obras necesarias para el barrio, que son solicitadas por los vecinos.</p><br
+                <p class="parrafoo">Las contribuciones por mejoras forman parte de un sistema que permite la realizacion, de forma
+                    financiada, de obras necesarias para un barrio, que son solicitadas por los vecinos del mismo.</p><br
                     class="saltoNone">
-                <p class="parrafoo p-mobile">La presente propuesta tiene como objetivo la actualizacion de tecnologia en
-                    luminarias con motivo de
-                    brindar al vecino una mejor calidad de vida, y fomentar el crecimiento y desarrollo de la ciudad en
-                    terminos urbanisticos.
+                <p class="parrafoo p-mobile">
                 </p>
             </div>
         </section>
@@ -101,9 +98,10 @@
             <div>
                 <article class="box-what">
                     <h3 id="obras" class="sub-title">SOBRE OBRAS</h3>
-                    <p>La presente propuesta tiene como objetivo la actualizacion de tecnologia en luminarias con motivo
-                        de brindar al vecino una mejor calidad de vida, y fomentar el crecimiento y desarrollo de la
-                        ciudad en terminos urbanisticos.</p><br class="saltoNone">
+                    <p>La presente propuesta tiene como objetivo la actualización de tecnología en
+                        luminarias con motivo de
+                        brindar al vecino una mejor calidad de vida, fomentar el crecimiento y desarrollo de la ciudad en
+                        términos urbanísticos.</p><br class="saltoNone">
                     <p>Puede presentar la siguiente nota, solicitando la obra. Completando la calle, sus intersecciones
                         y firmada por al
                         menos dos vecinos</p><br>
@@ -152,10 +150,10 @@
             <article class="box-what">
                 <div class="linea-separacion"></div>
                 <h3 class="sub-title saltoSeparado">FINANCIACION</h3>
-                <p>La misma se financia de la siguiente manera: En su primera etapa, la obra se financiará totalmente
-                    con recursos de FOGOP, concluida la misma, los propietarios reintegrarán parte del costo
-                    correspondiente a los materiales utilizados, pudiendo financiar hasta en 18 cuotas fijas y sin
-                    interés a elegir por el vecino.
+                <p>La misma se abonará de la siguiente manera: en su primera etapa la obra se financiará totalmente
+                    con recursos de Fogop. Una vez concluida la misma, los propietarios reintegraran parte del costo
+                    correspondiente a los materiales utilizados, pudiendo financiarlo hasta en 18 cuotas fijas sin
+                    interés; (siendo elección del vecino la modalidad del plan de pago: 1, 6, 12 o 18 cuotas fijas sin interés)
                 </p>
                 <br>
                 <p class="parrafo-mob">El valor restante será afrontado por el municipio, como así también la totalidad de los costos inherentes a la instalación (mano de obra). El importe mensual a abonar figurará en la boleta del impuesto inmobiliario, diferenciándose de tal con el concepto de “Contribución por mejoras” o las siglas “AOL”.
