--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
         <div class="slide-contenedor">
             <div class="miSlider fade">                
                 <picture>
-                    <source media="(min-width: 800px)" srcset="img/diseño.png">
-                    <source media="(max-width: 800px)" srcset="img/diseñoMobile.png">
-                    <img src="img/diseñoMobile.png" alt="imagen de luminarias en barrios">
+                    <source media="(min-width: 800px)" srcset="img/diseño.webp">
+                    <source media="(max-width: 800px)" srcset="img/diseñoMobile.webp">
+                    <img src="img/diseñoMobile.webp" alt="imagen de luminarias en barrios">
                   </picture>
                   
             </div>
             <div class="miSlider fade">
                 <picture>
-                    <source media="(min-width: 800px)" srcset="img/diseño2.png">
-                    <source media="(max-width: 800px)" srcset="img/diseñoMobile2.png">
-                    <img src="img/diseño2.png" alt="banner de diseño FOGOP">
+                    <source media="(min-width: 800px)" srcset="img/diseño2.webp">
+                    <source media="(max-width: 800px)" srcset="img/diseñoMobile2.webp">
+                    <img src="img/diseño2.webp" alt="banner de diseño FOGOP">
                   </picture>
             </div>
             <div class="miSlider fade">
                 <picture>
-                    <source media="(min-width: 800px)" srcset="img/diseño3.png">
-                    <source media="(max-width: 800px)" srcset="img/diseñoMobile3.png">
-                    <img src="img/diseño3.png" alt="banner Luminarias Fogop">
+                    <source media="(min-width: 800px)" srcset="img/diseño3.webp">
+                    <source media="(max-width: 800px)" srcset="img/diseñoMobile3.webp">
+                    <img src="img/diseño3.webp" alt="banner Luminarias Fogop">
                   </picture>
             </div>
             <div class="direcciones">
